Bug 471960 - Frequent random crashes
Summary: Frequent random crashes
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (show other bugs)
Version: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-04 21:58 UTC by Lynx3d
Modified: 2023-07-05 14:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
gdb backtrace (15.12 KB, text/plain)
2023-07-04 21:58 UTC, Lynx3d
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lynx3d 2023-07-04 21:58:28 UTC
Created attachment 160082 [details]
gdb backtrace

Krita crashes every few minutes for me, no identifiable reason (even happened while idle in background once).
See attached backtrace.

Looks a lot like this commit is the cause:
https://invent.kde.org/graphics/krita/-/commit/183997233a2bff56815573565ed27914eeed4cea

5.2.0 pre-alpha, git b1c826224092874a4c5926c97f2cea40147821d3
Ubuntu 22.04, compiled from source
Comment 1 Halla Rempt 2023-07-05 06:31:35 UTC
Dmitry, can you please take a look?
Comment 2 Dmitry Kazakov 2023-07-05 14:51:59 UTC
Git commit abb27a26fbf60198e13621440f244e62d1e096ef by Dmitry Kazakov.
Committed on 05/07/2023 at 14:50.
Pushed by dkazakov into branch 'master'.

Fix a crash when saving/autosaving an image

M  +0    -2    libs/image/kis_image.cc

https://invent.kde.org/graphics/krita/-/commit/abb27a26fbf60198e13621440f244e62d1e096ef