Fix a crash when saving/autosaving an image

BUG:471960